--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@ layout: default
       <figure class="absolute-bg preview__img" style="background-image: url('{{ post.image }}');"></figure>
     {% endfor %}
     <div class="previews__container">
-      <span>Welcome to</span>
-      <h1>{{ site.title }}</h1>
+      <!--span>Welcome to</span-->
+	  <span>{{ site.description | escape}} </span>
+      <h1>{{ site.title | escape }}</h1>
     </div>
   </div>
 
