--- a/_categories/road.html
+++ b/_categories/road.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Brunch
+title: Road
 description:
-permalink: /category/brunch/
+permalink: /category/road/
 ---
 {% include category.html %}
