--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: default
       <!--span>Welcome to</span-->
 	  <span>{{ site.description | escape}} </span>
       <h1>{{ site.title | escape }}</h1>
+	  <span>@{{ site.name | escape}} </span>
     </div>
   </div>
 
