--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ layout: default
       <ul class="tabs">
         <li class="tabs__item">Posts</li>
         <li class="tabs__item">Categories</li>
+        <li class="tabs__item">Galleries</li>
       </ul>
     </header>
 
@@ -52,6 +53,7 @@ layout: default
     </div>
 
     {% include categories-tab.html %}
+    {% include gallery-tab.html %}
 
   </div>
 
