--- a/_categories/life.html
+++ b/_categories/life.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Juice
+title: Life
 description:
-permalink: /category/juice/
+permalink: /category/life/
 ---
 {% include category.html %}
