--- a/_categories/travel.html
+++ b/_categories/travel.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Road
+title: Travel
 description:
-permalink: /category/road/
+permalink: /category/Travel/
 ---
 {% include category.html %}
