--- a/_categories/travel.html
+++ b/_categories/travel.html
@@ -2,6 +2,6 @@
 layout: default
 title: Travel
 description:
-permalink: /category/Travel/
+permalink: /category/travel/
 ---
 {% include category.html %}
