--- a/_categories/journey.html
+++ b/_categories/journey.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Travel
+title: Journey
 description:
-permalink: /category/travel/
+permalink: /category/journey/
 ---
 {% include category.html %}
