--- a/assets/html/fog/index.html
+++ b/assets/html/fog/index.html
@@ -26,7 +26,7 @@
 </script>
 <!-- 加载地图JSAPI脚本 -->
 <script src="https://webapi.amap.com/maps?v=2.0&key=4c44d7b6c3a165b57ebc9aae7381f120"></script>
-<script src="./js/data.js"></script>
+<script src="./js/data.js?v=1"></script>
 <script>
     // 给定两个矩形坐标，判断两个矩形是否相交，矩形给定的是左上和右下两个点，分别为x1,y1和x2,y2
     function in_box(rect1, rect2) {
@@ -46,8 +46,7 @@
         zooms: [2, 20],
         zIndex: 120
     });
-    var tranGPS = [[116.02180718316004, 39.910992296007], [116.72486653645899, 40.448243543837]];
-    var retina = AMap.Browser.retina;
+    var retina = AMap.Browser.retina?2:1;
 
     customLayer.render = function () {
         if (points === undefined) {
@@ -56,10 +55,8 @@
         var win_size = map.getSize();
         canvas.style.width = win_size.width + 'px';
         canvas.style.height = win_size.height + 'px';
-        if (retina) {
-            canvas.width = win_size.width * 2;
-            canvas.height = win_size.height * 2;//清除画布
-        }
+        canvas.width = win_size.width * retina;
+        canvas.height = win_size.height * retina;//清除画布
         let f2 = function (p2) {
             var pos1 = map.lngLatToContainer(p2.west_north);
             var pos2 = map.lngLatToContainer(p2.east_south);
@@ -80,38 +77,49 @@
             )) {
                 return;
             }
-            // var circle_r = Math.max((map.getZoom() - 15)*3+3,3);
-            var tile_size = {width: pos2.x - pos1.x, height: pos2.y - pos1.y};
-            var circle_r = Math.max(tile_size.width / 8192, 2);
-            console.log(circle_r, tile_size.width);
-            for (i in p2.data) {
-                pos = p2.data[i];
-                row = parseInt(pos / 8192);
-                col = pos % 8192;
 
-                x = tile_size.width / 8192 * col + pos1.x;
-                y = tile_size.height / 8192 * row + pos1.y;
+            var tile_size = {width: pos2.x - pos1.x, height: pos2.y - pos1.y};
+            var use_thumb = tile_size.width*8 < win_size.width || tile_size.height*8 < win_size.height;
+            var tile_point_width = use_thumb?128:8192;
+            var data = use_thumb?p2.thumb:p2.data;
+            var step = Math.max(1, parseInt(tile_point_width/tile_size.width/2));
+            var circle_r = Math.max(tile_size.width / tile_point_width, 2);
+            console.log("use_thumb", use_thumb, "step", step, "circle_r", circle_r);
+            for (i = 0; i < data.length; i+=1) {
+                pos = data[i];
+                row = parseInt(pos / tile_point_width);
+                col = pos % tile_point_width;
+
+                x = tile_size.width / tile_point_width * col + pos1.x;
+                y = tile_size.height / tile_point_width * row + pos1.y;
 
                 ctx.beginPath();
-                ctx.arc(x * 2 + circle_r, y * 2 + circle_r, circle_r, 0, 2 * Math.PI);
+                ctx.arc(x * retina + circle_r, y * retina + circle_r, circle_r, 0, 2 * Math.PI);
                 ctx.fill();
             }
         }
 
-
         let f = function (p1) {
             if (p1.color !== undefined) {
-                // ctx.fillStyle = p1.color;
+                ctx.fillStyle = p1.color;
             }
             for (p2 in p1.points) {
                 f2(p1.points[p2]);
             }
         }
 
+        ctx.fillStyle = "white";
+        // ctx.globalCompositeOperation="lighter";
+        ctx.globalAlpha = 0.2;
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
         ctx.fillStyle = "#08f";
+        ctx.globalAlpha = 0.7;
+
+        var start = Date.now();
         for (p1 in points) {
             f(points[p1])
         }
+        console.log("render points cost: " + (Date.now() - start));
     }
     window.addEventListener('load', function() {
         // 页面所有资源都加载完毕后执行的代码
