添加支持路径前缀

--- a/assets/html/hand_write/index.html
+++ b/assets/html/hand_write/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Hand Write Number Recognize</title>
-    <script src="/assets/js/jquery-3.7.1.min.js"></script>
-    <script src="/assets/js/tf@2.0.0.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/jquery-3.7.1.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/tf@2.0.0.min.js"></script>
     <style>
         .main {
             text-align: center;
