--- a/archive.html
+++ b/archive.html
@@ -19,9 +19,9 @@ permalink: /archive/
         <a class="card__link" href="{{ post.url | prepend: site.baseurl }}" itemprop="url">
           <div class="card__img">
             {% if post.image-sm %}
-              <figure class="absolute-bg wow" style="background-image: url('{{ post.image-sm }}');"></figure>
+              <figure class="absolute-bg wow" style="background-image: url('{{ post.image-sm | prepend: site.baseurl }}');"></figure>
             {% else %}
-              <figure class="absolute-bg wow" style="background-image: url('{{ post.image }}');"></figure>
+              <figure class="absolute-bg wow" style="background-image: url('{{ post.image | prepend: site.baseurl }}');"></figure>
             {% endif %}
           </div>
           <div class="card__container">
